Fix align & margin issues. Fix Footer. Change logo properties.

--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ header {
     display: flex;
     justify-content: space-between;
 }
- header ul.left-menu {
+ul.left-menu {
     display: flex;
     justify-content: left;
     flex-direction: row;
     justify-content: flex-start;
 } 
-header ul.right-menu {
+ul.right-menu {
     display: flex;
     justify-content: right;
     flex-direction: row;
@@ -37,7 +37,8 @@ body{
 }
 
 .logo {
-    margin: 7% auto;
+    margin-top: 5%;
+    margin-left: 42.5%;
     display: block;
     position: relative;
 }
@@ -47,7 +48,6 @@ body{
   
 .input-icon { 
     width: 100%; 
-    margin-bottom: 30px; 
 } 
 .icon { 
     margin-left: 35%;
@@ -57,26 +57,41 @@ body{
     text-align: center; 
 } 
 .search {
-    margin: 7% auto;
+    margin: 2% auto;
     display: block;
     padding: 10px;
-    border-radius: 12px;
+    border-radius: 15px;
     width: 30%;
 }
 .bodylink {
-    max-width: 110%;
+    position: relative;
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    align-content: stretch;
     justify-content: center;
-    position: absolute;
 }
 
 footer {
     position: fixed;
-    margin-top: 19%;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color:rgba(221, 217, 217, 0.459);
+    color: #000;
+    display: flex;
+    justify-content: space-between;
 }
 
 .button {
     background-color: #4285f4;
     color: #fff;
     border-radius: 2px;
+}
+.button1 {
+    background-color: rgba(221, 217, 217, 0.459);
+    color: #000;
+    border-radius: 2px;
+    padding: 10px;
 }
